--- a/src/index.css
+++ b/src/index.css
@@ -2,11 +2,20 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+  color: #fff;
 }
 
+.mainContainer {
+  background: url('./assets/bg1.jpg');
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: fill;
+  height: 100vh;
+}
 .title {
   display: flex;
   justify-content: center;
+
 }
 
 .setup {
