:lipstick: improved background

--- a/src/index.css
+++ b/src/index.css
@@ -15,7 +15,7 @@ button {
 }
 
 .mainContainer {
-  background: url('./assets/bg1.jpg');
+  background: url('./assets/bg7.png');
   background-repeat: no-repeat;
   background-position: center;
   background-size: fill;
