--- a/src/index.css
+++ b/src/index.css
@@ -20,15 +20,33 @@ button {
   background-position: center;
   background-size: fill;
   height: 100vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  
 }
+
 
 /*Welcome Page*/
 .container {
-  display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  height: 100%;
+  height: 70%;
+  width: 50%;
+  margin: 0 auto;
+  padding-bottom: 50px;
+  background: rgba( 255, 255, 255, 0.1 );
+  box-shadow: 0 8px 32px 0 rgba( 31, 38, 135, 0.37 );
+  backdrop-filter: blur( 4px );
+  -webkit-backdrop-filter: blur( 4px );
+  border-radius: 10px;
+  border: 1px solid rgba( 255, 255, 255, 0.18 );
+}
+
+.logo {
+  height: 200px;
+  margin-top: 50px;
 }
 
 .title {
@@ -39,9 +57,11 @@ button {
 }
 
 .setup {
+  margin: 0 auto;
   display: flex;
   flex-direction: column;
   align-items: center;
+  align-self: center;
   width: 50%;
   gap: 24px;
   font-size: 24px;
@@ -49,7 +69,7 @@ button {
 }
 
 .actions {
-  width: 40%;
+  width: 100%;
   display: flex;
   justify-content: space-around;
   font-size: 24px;
