--- a/src/index.css
+++ b/src/index.css
@@ -23,9 +23,17 @@ button {
   display: flex;
   justify-content: center;
   align-items: center;
-  
 }
+/* General Classes */
 
+.glass {
+  background: rgba(255, 255, 255, 0.25);
+  box-shadow: 0 8px 32px 0 rgba(31, 38, 135, 0.37);
+  backdrop-filter: blur(5px);
+  -webkit-backdrop-filter: blur(5px);
+  border-radius: 30px;
+  border: 1px solid rgba(255, 255, 255, 0.18);
+}
 
 /*Welcome Page*/
 .container {
@@ -36,12 +44,6 @@ button {
   width: 50%;
   margin: 0 auto;
   padding-bottom: 50px;
-  background: rgba( 255, 255, 255, 0.25);
-  box-shadow: 0 8px 32px 0 rgba( 31, 38, 135, 0.37 );
-  backdrop-filter: blur( 5px );
-  -webkit-backdrop-filter: blur( 5px );
-  border-radius: 30px;
-  border: 1px solid rgba( 255, 255, 255, 0.18 );  
 }
 
 .logo {
@@ -107,6 +109,7 @@ button {
   height: 100vh;
   justify-content: center;
   gap: 20%;
+  width: 100%;
 }
 
 .three-players {
@@ -115,6 +118,7 @@ button {
   grid-template-rows: repeat(2, 1fr);
   justify-items: center;
   height: 100vh;
+  width: 100%;
 }
 
 .four-players {
@@ -123,4 +127,5 @@ button {
   grid-template-rows: repeat(2, 1fr);
   justify-items: center;
   height: 100vh;
+  width: 100%;
 }
