--- a/src/index.css
+++ b/src/index.css
@@ -94,7 +94,7 @@ button {
 }
 
 .title h2 {
-  margin-top: -40px;
+  margin-top: -30px;
   letter-spacing: 0.3cap;
   font-family: 'Lovelo';
   font-weight: 900;
@@ -116,7 +116,7 @@ button {
 }
 
 .actions {
-  width: 100%;
+  width: 250px;
   display: flex;
   justify-content: space-around;
   font-size: 24px;
@@ -153,7 +153,7 @@ button {
 }
 
 .btn {
-  font-size: 56px;
+  width: 30px;
 }
 
 .start {
@@ -163,11 +163,22 @@ button {
   margin-top: auto;
 }
 
+.start:disabled {
+  color: #ccc;
+}
+
 .footer {
   margin-top: auto;
 }
 
 /* Layout */
+.player {
+  display: flex;
+  flex-direction: column;
+  height: 40%;
+  justify-content: center;
+  gap: 24px;
+}
 
 .two-players {
   display: flex;
@@ -180,12 +191,14 @@ button {
 }
 
 .three-players {
+  overflow: hidden;
   display: grid;
-  grid-template-columns: repeat(2, 1fr);
+  grid-template-columns: repeat(2, 50%);
   grid-template-rows: repeat(2, 1fr);
-  justify-items: center;
-  height: 100vh;
   width: 100%;
+  justify-items: center;
+  height: 100%;
+  align-items: center;
 }
 
 .four-players {
@@ -198,7 +211,6 @@ button {
 }
 
 /* Win Page */
-
 .winPage {
   background-repeat: no-repeat;
   background-position: center;
@@ -208,17 +220,18 @@ button {
   justify-content: center;
   align-items: center;
   width: 100%;
+  position: absolute;
 }
 
 .character {
-  width: 700px;
+  width: 100%;
   position: absolute;
   bottom: 0;
 }
 
 .bubbleMaleficient {
   position: relative;
-  width: 390px;
+  width: 350px;
   height: 170px;
   padding: 5px;
   background: rgba(0, 0, 0, 0.8);
@@ -226,7 +239,7 @@ button {
   -moz-border-radius: 20px;
   border-radius: 20px;
   border: #000000 solid 2px;
-  transform: translate(-200px, -200px);
+  transform: translateY(-200px);
   text-align: center;
   display: flex;
   justify-content: center;
@@ -244,7 +257,7 @@ button {
   width: 0;
   z-index: 1;
   bottom: -20px;
-  left: 336px;
+  left: 300px;
 }
 
 .bubbleSimba {
@@ -257,7 +270,7 @@ button {
   -moz-border-radius: 20px;
   border-radius: 20px;
   border: #000000 solid 2px;
-  transform: translate(100px, -200px);
+  transform: translateY(-200px);
   text-align: center;
   display: flex;
   justify-content: center;
