--- a/src/index.css
+++ b/src/index.css
@@ -203,10 +203,11 @@ button {
 
 .four-players {
   display: grid;
-  grid-template-columns: repeat(2, 1fr);
+  grid-template-columns: repeat(2, 50%);
   grid-template-rows: repeat(2, 1fr);
   justify-items: center;
-  height: 100vh;
+  align-items: center;
+  height: 100%;
   width: 100%;
 }
 
