--- a/src/index.css
+++ b/src/index.css
@@ -51,6 +51,12 @@ button {
   border: 1px solid rgba(255, 255, 255, 0.18);
 }
 
+.border {
+  position: absolute;
+  width: 100%;
+  height: auto;
+}
+
 /*Welcome Page*/
 .welcome {
   background: url('./assets/backgrounds/bg7.png');
@@ -175,9 +181,9 @@ button {
 .player {
   display: flex;
   flex-direction: column;
-  height: 40%;
+  height: 30%;
   justify-content: center;
-  gap: 24px;
+  gap: 25%;
 }
 
 .two-players {
@@ -186,8 +192,8 @@ button {
   align-items: center;
   height: 100vh;
   justify-content: center;
-  gap: 20%;
   width: 100%;
+  gap: 10%;
 }
 
 .three-players {
