icons and responsiveness

--- a/src/index.css
+++ b/src/index.css
@@ -230,26 +230,47 @@ button {
   position: absolute;
 }
 
-.character {
-  width: 100%;
+.arrow-buttons {
+  display: flex;
   position: absolute;
+  top: 5%;
+  right: 10%;
+  width: 100px;
+  justify-content: space-around;
+  opacity: 0.6;
+}
+
+.characterContainer {
+  display: flex;
+  width: 100%;
+  height: 100%;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+.character {
   bottom: 0;
+  width: 100%;
+  height: auto;
+  position: absolute;
 }
 
 .bubbleMaleficient {
   width: 100%;
   height: auto;
   position: absolute;
-  top: 130px;
+  top: 40px;
 }
 
 .winnerName {
   color: #c2d9b0;
   font-size: 24px;
   position: absolute;
-  transform: translateY(-120px);
+  transform: translateY(-180px);
   text-transform: uppercase;
   letter-spacing: 0.3cap;
+  width: 60%;
 }
 
 .bubbleSimba {
@@ -263,7 +284,7 @@ button {
   color: #730602;
   font-size: 24px;
   position: absolute;
-  transform: translateY(-70px);
+  transform: translateY(-40px);
   text-transform: uppercase;
   letter-spacing: 0.3cap;
 }
