--- a/src/index.css
+++ b/src/index.css
@@ -238,6 +238,7 @@ button {
   width: 100px;
   justify-content: space-around;
   opacity: 0.6;
+  z-index: 1;
 }
 
 .characterContainer {
@@ -245,46 +246,55 @@ button {
   width: 100%;
   height: 100%;
   flex-direction: column;
-  justify-content: center;
   align-items: center;
 }
 
 .character {
-  bottom: 0;
   width: 100%;
   height: auto;
+  max-width: 400px;
+  bottom: 0;
   position: absolute;
 }
 
 .bubbleMaleficient {
+  display: flex;
+  align-content: center;
+  justify-content: center;
+  align-items: center;
+}
+
+.bubbleMaleficient img {
   width: 100%;
   height: auto;
-  position: absolute;
-  top: 40px;
 }
 
 .winnerName {
   color: #c2d9b0;
   font-size: 24px;
-  position: absolute;
-  transform: translateY(-180px);
   text-transform: uppercase;
   letter-spacing: 0.3cap;
-  width: 60%;
+  max-width: 60%;
+  position: absolute;
 }
 
 .bubbleSimba {
+  display: flex;
+  align-content: center;
+  justify-content: center;
+  align-items: center;
+}
+
+.bubbleSimba img {
   width: 100%;
   height: auto;
-  position: absolute;
-  top: 180px;
 }
 
 .winnerNameSimba {
   color: #730602;
   font-size: 24px;
-  position: absolute;
-  transform: translateY(-40px);
   text-transform: uppercase;
   letter-spacing: 0.3cap;
+  max-width: 60%;
+  position: absolute;
 }
